# HarmonicPicolator

./: CMakeLists.txt  HARMPERC.key  HarmPercCabbagePlugin.csd  HarmPercCabbageStereoPlug.csd  HarmPerc_tonefilter.cpp  NoCabharmperc.csd  README.txt  harmperc.cpp  harmperc.csd  harmperc.dylib  harmperc.h  harmperc_2.csd  termtxt.txt
csd/: HarmonicPercolator.csd
